cmnn burden findings updated

--- a/rmd/cmnn_burden.html
+++ b/rmd/cmnn_burden.html
@@ -376,14 +376,14 @@ DALYs_plot</code></pre>
 </div>
 <div id="summary-of-cmnn-burden-findings" class="section level2">
 <h2>Summary of CMNN Burden Findings</h2>
-<p>The findings shows a notable difference in the trends DALY related to
-Communicable Diseases between the Burundi, Malawi and Namibia. All three
-countries experienced a high burden of communicable diseases between the
-year 1990 and 2005. Notably, whilst Burundi and Malawi’s burden started
-to decline around 1995, Namibia’s burden was on the steady rise and only
-reached a peak around the year 2004. This could be attributed to delayed
-health response and interventions for HIV/AIDS and TB that was prevalent
-in the country during that time.</p>
+<p>The findings shows a notable difference in the trends of DALY related
+to Communicable Diseases between the Burundi, Malawi and Namibia. All
+three countries experienced a high burden of communicable diseases
+between the year 1990 and 2005. Notably, whilst Burundi and Malawi’s
+burden started to decline around 1995, Namibia’s burden was on the
+steady rise and only reached a peak around the year 2004. This could be
+attributed to delayed health response and interventions for HIV/AIDS and
+TB that was prevalent in the country during that time.</p>
 </div>
 </div>
 
